--- a/src/screens/Settings/SettingsScreen.css
+++ b/src/screens/Settings/SettingsScreen.css
@@ -1,6 +1,6 @@
 .settings-screen {
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: clip;
   flex: 1;
   width: 100%;
   padding: 20px;
