--- a/src/screens/Settings/SettingsSubScreens.css
+++ b/src/screens/Settings/SettingsSubScreens.css
@@ -3,7 +3,7 @@
 .sub-screen {
   flex: 1;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: clip;
   width: 100%;
   padding: 20px;
 }
